--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "server": "json-server --watch src/invoices.json --port 5000"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.468.0",
+    "lucide-vue-next": "^0.468.0",
     "pinia": "^2.2.6",
     "primeicons": "^7.0.0",
+    "radix-vue": "^1.9.11",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
