finished invocie creation page

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.0",
+    "@vueuse/core": "^12.0.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -28,8 +29,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.13",
     "vue-router": "^4.4.5",
-    "vue-spinner": "^1.0.4",
-    "vue3-toastify": "^0.2.5"
+    "vue-spinner": "^1.0.4"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
